Bug 355818 - slow script / app crash
Summary: slow script / app crash
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.4.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 384313 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-24 05:20 UTC by Eric Caron
Modified: 2018-07-25 16:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Caron 2015-11-24 05:20:54 UTC
Application: systemsettings5 (5.4.1)

Qt Version: 5.4.2
Operating System: Linux 4.2.0-18-generic i686
Distribution: Ubuntu 15.10

-- Information about the crash:
- Unusual behavior I noticed:

- Custom settings of the application:

i am using muon discover. and i've got several pages open. 
everything went slow as soon as i attempted  to open muon with at least 3 web pages open (one being facebook)

-- Backtrace:
Application: System Settings (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb2526780 (LWP 3528))]

Thread 5 (Thread 0xb1feab40 (LWP 3529)):
#0  0xb7703be8 in __kernel_vsyscall ()
#1  0xb5ce43db in poll () at ../sysdeps/unix/syscall-template.S:81
#2  0xb4c803ad in ?? () from /usr/lib/i386-linux-gnu/libxcb.so.1
#3  0xb4c823fb in xcb_wait_for_event () from /usr/lib/i386-linux-gnu/libxcb.so.1
#4  0xb2146173 in QXcbEventReader::run (this=0x8fdfe78) at qxcbconnection.cpp:1105
#5  0xb5fc065b in QThreadPrivate::start (arg=0x8fdfe78) at thread/qthread_unix.cpp:337
#6  0xb4c071aa in start_thread (arg=0xb1feab40) at pthread_create.c:333
#7  0xb5ceefde in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:122

Thread 4 (Thread 0xad1c1b40 (LWP 3530)):
#0  0xb7703be8 in __kernel_vsyscall ()
#1  0xb4c0c25c in pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:187
#2  0xb5cfbcf6 in __pthread_cond_wait (cond=0x91371e8, mutex=0x91371d0) at forward.c:149
#3  0xafa25778 in ?? () from /usr/lib/i386-linux-gnu/dri/r300_dri.so
#4  0xafa24d65 in ?? () from /usr/lib/i386-linux-gnu/dri/r300_dri.so
#5  0xb4c071aa in start_thread (arg=0xad1c1b40) at pthread_create.c:333
#6  0xb5ceefde in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:122

Thread 3 (Thread 0x9f409b40 (LWP 3691)):
#0  0xb4b073ad in g_mutex_lock () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb4ac0df9 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4ac1054 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb4ac10b0 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4ae7e0a in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb4c071aa in start_thread (arg=0x9f409b40) at pthread_create.c:333
#6  0xb5ceefde in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:122

Thread 2 (Thread 0xa1c2eb40 (LWP 3692)):
#0  0xb4b06f31 in g_private_get () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb4ae834c in g_thread_self () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4abfd4b in g_main_context_acquire () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb4ac0db8 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4ac1339 in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xaabfe5f5 in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0xb4ae7e0a in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0xb4c071aa in start_thread (arg=0xa1c2eb40) at pthread_create.c:333
#8  0xb5ceefde in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:122

Thread 1 (Thread 0xb2526780 (LWP 3528)):
[KCrash Handler]
#7  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=0x24) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:135
#8  qGetPtrHelper<QScopedPointer<QObjectData> > (p=...) at ../../include/QtCore/../../src/corelib/global/qglobal.h:962
#9  QWindow::d_func (this=0x20) at kernel/qwindow.h:85
#10 QWindow::requestActivate (this=0x20) at kernel/qwindow.cpp:969
#11 0xb6cff7d0 in QWidget::activateWindow (this=0x907de38) at kernel/qwidget.cpp:12563
#12 0x08054282 in SystemSettingsApp::<lambda()>::operator() (__closure=<synthetic pointer>) at ../../app/SystemSettingsApp.cpp:30
#13 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, SystemSettingsApp::SystemSettingsApp(int&, char**)::<lambda()> >::call (arg=0xbfb1f330, f=...) at /usr/include/i386-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:494
#14 QtPrivate::Functor<SystemSettingsApp::SystemSettingsApp(int&, char**)::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=0xbfb1f330, f=...) at /usr/include/i386-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:551
#15 QtPrivate::QFunctorSlotObject<SystemSettingsApp::SystemSettingsApp(int&, char**)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x901faf8, r=0xbfb1fc00, a=0xbfb1f330, ret=0x0) at /usr/include/i386-linux-gnu/qt5/QtCore/qobject_impl.h:192
#16 0xb61c7d00 in QtPrivate::QSlotObjectBase::call (a=0xbfb1f330, r=0xbfb1fc00, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#17 QMetaObject::activate (sender=0x90231d0, signalOffset=3, local_signal_index=0, argv=0xbfb1f330) at kernel/qobject.cpp:3702
#18 0xb61c85dd in QMetaObject::activate (sender=0x90231d0, m=0xb6580e90 <KDBusService::staticMetaObject>, local_signal_index=0, argv=0xbfb1f330) at kernel/qobject.cpp:3582
#19 0xb6579136 in KDBusService::activateRequested(QStringList const&, QString const&) () from /usr/lib/i386-linux-gnu/libKF5DBusAddons.so.5
#20 0xb6575842 in KDBusService::Activate(QMap<QString, QVariant> const&) () from /usr/lib/i386-linux-gnu/libKF5DBusAddons.so.5
#21 0xb6578c29 in ?? () from /usr/lib/i386-linux-gnu/libKF5DBusAddons.so.5
#22 0xb6578dd8 in ?? () from /usr/lib/i386-linux-gnu/libKF5DBusAddons.so.5
#23 0xb64f58a4 in QDBusConnectionPrivate::deliverCall (this=0x9011238, object=0x9022b20, msg=..., metaTypes=..., slotIdx=5) at qdbusintegrator.cpp:992
#24 0xb64f96da in QDBusConnectionPrivate::activateCall (this=0x9011238, object=0x9022b20, flags=273, msg=...) at qdbusintegrator.cpp:898
#25 0xb64fa06b in QDBusConnectionPrivate::activateObject (this=0x9011238, node=..., msg=..., pathStartPos=24) at qdbusintegrator.cpp:1460
#26 0xb64fb25b in QDBusActivateObjectEvent::placeMetaCall (this=0x94e1958) at qdbusintegrator.cpp:1582
#27 0xb61c8d13 in QObject::event (this=0x90231d0, e=0x94e1958) at kernel/qobject.cpp:1245
#28 0xb6cc9daa in QApplicationPrivate::notify_helper (this=0x8fcae28, receiver=0x90231d0, e=0x94e1958) at kernel/qapplication.cpp:3720
#29 0xb6ccf67f in QApplication::notify (this=0xbfb1fc00, receiver=0x90231d0, e=0x94e1958) at kernel/qapplication.cpp:3503
#30 0xb61950ff in QCoreApplication::notifyInternal (this=0xbfb1fc00, receiver=0x90231d0, event=0x94e1958) at kernel/qcoreapplication.cpp:935
#31 0xb619751d in QCoreApplication::sendEvent (event=0x94e1958, receiver=<optimized out>) at kernel/qcoreapplication.h:228
#32 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8fca9a0) at kernel/qcoreapplication.cpp:1552
#33 0xb6197a57 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1410
#34 0xb61ef3d3 in postEventSourceDispatch (s=0x8fcb7b0) at kernel/qeventdispatcher_glib.cpp:271
#35 0xb4ac0ce9 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#36 0xb4ac0f89 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#37 0xb4ac1054 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#38 0xb61ef7c3 in QEventDispatcherGlib::processEvents (this=0x9000500, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#39 0xb2175bc1 in QPAEventDispatcherGlib::processEvents (this=0x9000500, flags=...) at eventdispatchers/qeventdispatcher_glib.cpp:115
#40 0xb61922b3 in QEventLoop::processEvents (this=0xbfb1fb28, flags=...) at kernel/qeventloop.cpp:128
#41 0xb6192702 in QEventLoop::exec (this=0xbfb1fb28, flags=...) at kernel/qeventloop.cpp:204
#42 0xb619a7e5 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1188
#43 0xb671acf1 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1510
#44 0xb6cc5cb4 in QApplication::exec () at kernel/qapplication.cpp:2956
#45 0x080540d7 in main (argc=1, argv=0xbfb1fcd4) at ../../app/main.cpp:55

Reported using DrKonqi
Comment 1 Marco Martin 2018-07-25 15:52:48 UTC
Git commit 6f032226cebeaf7459382664f8fbb549ac6d4e3c by Marco Martin.
Committed on 25/07/2018 at 15:52.
Pushed by mart into branch 'Plasma/5.13'.

check for window existence

M  +3    -1    app/SystemSettingsApp.cpp
M  +1    -1    app/SystemSettingsApp.h

https://commits.kde.org/systemsettings/6f032226cebeaf7459382664f8fbb549ac6d4e3c
Comment 2 Marco Martin 2018-07-25 16:14:44 UTC
*** Bug 384313 has been marked as a duplicate of this bug. ***