check for window existence

BUG:355818